--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.google.firebase:firebase-auth:21.0.2'
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation platform('com.google.firebase:firebase-bom:29.3.0')
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.2'
 
 
 
