--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AlloDOC">
         <activity
+            android:name="com.example.allodocc.chatActivity"
+            android:exported="false" />
+        <activity
             android:name="com.example.allodocc.recherche"
             android:exported="false" />
         <activity
@@ -60,13 +63,10 @@
             android:label="@string/title_activity_maps" />
         <activity
             android:name="com.example.allodocc.UserProfil"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name="com.example.allodocc.profilDocteur"
-            android:exported="true"></activity>
-        <activity
-            android:name="com.example.allodocc.ChoixConsultation"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name="com.example.allodocc.inscription"
             android:exported="false" />
@@ -82,6 +82,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="com.example.allodocc.chat.messagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
